2005-10-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/paper-book.cc (add_score_title): put Paper_score title into
	systems_ list.

	* scm/translation-functions.scm (format-new-bass-figure): also
	allow plus in combination with _

2005-10-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: 2.7.13 released.

	* lily/note-collision.cc (check_meshing_chords): don't wipe
	stencil, merely set transparent.

	* Documentation/topdocs/NEWS.tely (Top): mention John Mandereau. 
	(Top): document #'callbacks.
	(Top): document nested \override.

	* input/regression/figured-bass.ly: update for slash and pluses.

	* input/regression/figured-bass-continuation-forbid.ly (Module):
	new file.

	* scm/translation-functions.scm (format-new-bass-figure): use
	slashed-digit if diminished is set.
	(format-new-bass-figure): add + if 'augmented is set.

	* scm/define-markup-commands.scm (slashed-digit): new command slashed-digit.

	* input/test/piano-staff-distance.ly: remove file.

	* Documentation/user/advanced-notation.itely (Formatting cue
	notes): use length-fraction for making stems/beams smaller.

	* lily/parser.yy (bass_figure): accept \+ \! and / as figured bass
	modifications.

	* lily/new-figured-bass-engraver.cc: new property
	centerFiguredBassContinuations

	* Documentation/user/changing-defaults.itely (Difficult tweaks):
	use callbacks.

	* lily/context-property.cc (execute_general_pushpop_property):
	robustness checks.

	* input/regression/override-nest.ly: new file.

	* python/convertrules.py (FatalConversionError.subber): conversion
	rule for #'callbacks

	* input/regression/override-nest.ly: new function.

	* lily/parser.yy (music_property_def): allow \override #'a #'b =
	#c too. 

	* lily/context-property.cc (lookup_nested_property): new function.
	(evict_from_alist): new function.
	(general_pushpop_property): new function.
	(execute_general_pushpop_property): rewrite. Support nested
	properties too.

2005-10-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
